<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/schedules"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedules" />
        <item
            android:id="@+id/speakers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/speakers" />
        <item
            android:id="@+id/paperStatus"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/paperStatus" />
        <item
            android:id="@+id/prevConf"
            android:icon="@drawable/ic_folder_special_black_24dp"
            android:title="@string/prevConf" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_committee"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="Committee"/>

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_navigate"
                android:icon="@drawable/ic_place_black_24dp"
                android:title="@string/menu_navigate"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/contactUs" />
        </menu>
    </item>

</menu>
