<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/jiitlogo"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About JIIT"
        android:textSize="20dp"
        android:padding="8dp"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18dp"
        android:layout_margin="10dp"
        android:id="@+id/notification_main_columnheading"
        android:text="@string/about_jiit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/aboutCallBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_call_blue_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/Authority_number"
            android:textSize="18dp"
            android:id="@+id/aboutphone"
            android:padding="8dp"
            android:onClick="callAuthority"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/aboutMailBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_mail_outline_black_24dp"/>

        <TextView
            android:id="@+id/aboutEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="mailAuthority"
            android:textSize="18dp"
            android:text="@string/Email"
            android:padding="8dp"/>
    </LinearLayout>



</LinearLayout>