<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="2dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:src="@drawable/jiitlogo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginRight="4dp"
            android:src="@drawable/jaypee_logo_full" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="16dp">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:padding="4dp"
        android:id="@+id/slidingmessagetop"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="\t\t6TH INTERNATIONAL CONFERENCE ON SIGNAL PROCESSING AND COMMUNICATION.\tMarch 5th-7th, 2020\tOrganized by ECE Department,\tJaypee Institute of Information Technology, Noida (INDIA)"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/icsc_2020"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_weight="3"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="4dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ieeelogo"/>
            </LinearLayout>

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:textColor="#000000"
                android:textSize="16sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/technically_co_sponsored_by"
                android:textStyle="bold"/>
            
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ieee_logo_up"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:text="IEEE Signal Processing Society,\nUP Section Chapter"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/financially_co_sponsered_by"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/inserb"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:text="Science and Engineering Research Board Department of Science and Technology, Government of India"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>